--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -71,7 +71,7 @@ and open the template in the editor.
                     -Edusave Certificate of academic achievement 2012, 2013, 2015,2016<br>
                     -NYAA Bronze 2010<br><br>
 
-                    <a class='resume' href="file/Yvonne_resume.pdf" download>
+                    <a class='resume' href="file/Yvonne_resume.pdf" target="_blank" download>
                         Download Resume
                     </a>
                     
