--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,7 +17,7 @@ and open the template in the editor.
 
 
         <link rel="stylesheet" href="https://use.typekit.net/gyc1igq.css">
-        <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+        <link rel="icon" type="image/webp" sizes="32x32" href="images/favicon-32x32.webp">
         <script src="javascript/script.js"></script>
         <link href="stylesheet/style.css" rel="stylesheet" type="text/css"/>
     </head>
@@ -48,7 +48,7 @@ and open the template in the editor.
             <!---Main-->
             <div id='container1'>
                 <div id='sideContent'><p><b>Slumberous Cat</b><br><span class='op'>Creative Design and Code</span></p></div>
-                <img src='images/cat.png' style='margin-left:40vw; height:90%; position:fixed;'/>
+                <img src='images/cat.webp' style='margin-left:40vw; height:90%; position:fixed;'/>
 
             </div>
 
@@ -81,7 +81,7 @@ and open the template in the editor.
 
                         </ul>
                     </div>
-                    <a class="nav-link" id="logoLink" href="index.html" style='width:70vw;'><span id='logo1'><img src='images/catLogo.png' style='width: 3rem; margin-top: 20px'/></span>
+                    <a class="nav-link" id="logoLink" href="index.html" style='width:70vw;'><span id='logo1'><img src='images/catLogo.webp' style='width: 3rem; margin-top: 20px'/></span>
                         <span class='logo2'><span class='big' style='font-family: "minion-pro", serif;
                                                   font-weight: 400;
                                                   font-style: normal; font-size:0.9rem;'>Slumberous Cat</span>by Yvonne</span></a>
