--- a/portfolio/success.html
+++ b/portfolio/success.html
@@ -18,7 +18,7 @@ and open the template in the editor.
         <link rel="stylesheet" href="https://use.typekit.net/gyc1igq.css">
         <script src="javascript/script.js"></script>
         <link href="stylesheet/style.css" rel="stylesheet" type="text/css"/>
-        <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+        <link rel="icon" type="image/webp" sizes="32x32" href="images/favicon-32x32.webp">
     </head>
     <body>
         
@@ -82,7 +82,7 @@ and open the template in the editor.
 
                         </ul>
                     </div>
-                    <a class="nav-link" id="logoLink" href="index.html" style='width:70vw;'><span id='logo1'><img src='images/catLogo.png' style='width: 3rem; margin-top: 20px'/></span>
+                    <a class="nav-link" id="logoLink" href="index.html" style='width:70vw;'><span id='logo1'><img src='images/catLogo.webp' style='width: 3rem; margin-top: 20px'/></span>
                         <span class='logo2'><span class='big' style='font-family: "minion-pro", serif;
                                                   font-weight: 400;
                                                   font-style: normal; font-size:0.9rem;'>Slumberous Cat</span>by Yvonne</span></a>
