--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -90,7 +90,7 @@ and open the template in the editor.
                             </div>
                             <div class="col-md-4 design">
                                 <div class="content" data-modal="maldivesSpecial">
-                                    <img src="images/mag4.webp" alt="MaldivesMag" style="max-height: 40vh; width:100%; height:100%;">
+                                    <img src="images/smolMag4.webp" alt="MaldivesMag" style="max-height: 40vh; width:100%; height:100%;">
                                     <p>Maldives Special - Magazine Mockup</p>
                                 </div>
                             </div>
