--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -513,7 +513,7 @@ and open the template in the editor.
                                                 windows of what it may be like to have a vacation at this location. 
                                             </p>
 
-                                            <img src="images/moodBoard4.webp" style="width:90%;"/>
+                                            <img src="images/moodboard4.webp" style="width:90%;"/>
                                             <br><br>
                                             <p>
                                                 During the research, the mood board bring inspiration for the type of end 
