--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -1241,7 +1241,7 @@ and open the template in the editor.
                                                 if we wanted to challenge ourselves, so I give it a shot.<br><br> It was a small struggle 
                                                 at first to implement it but I manage to overcome it by patiently studying the 
                                                 documentation for the android arsenal dialog box. Another which I learn from 
-                                                doing this project was doing the splash screen that has a simple animation.</p>
+                                                doing this project was doing the splash screen that has a simple animation.</p> <br><br><a class='credit' href="http://www.freepik.com" target="_blank">The presentation mockup is a free resource by rawpixel.com / Freepik</a>
                                         </div>
 
 
