--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -743,7 +743,7 @@ and open the template in the editor.
                                             <h6><b>Our Team</b></h6>
                                             <img src="images/teamLogo.webp" style="width:40%;"/><br><br>
 
-                                            <p>Members: Yvonne, Chavonne, Shou Kang, Edry</p>
+                                            <p>Members: <a href="https://github.com/BlackNet13">Yvonne</a>, <a href="https://github.com/chavonne-kek">Chavonne</a>, <a href="https://github.com/ShouKang49">Shou Kang</a>, <a href="https://github.com/masedryer">Edry</a> <span class="credit">(*click on names to bring you to their github page)</span></p>
 
                                             <p>Made out of 4 people, drawing inspiration from how most tech logos are 
                                                 round our logo takes on a circular shape which can also
