--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html lang="en" dir="ltr">
     <head>
         <title>SlumberousCat: Portfolio</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Portfolio Page of Slumberous Cat , Yvonne's Portfolio">
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -38,8 +34,8 @@ and open the template in the editor.
             <p class="copyright">Copyright © Slumberous Cat 2023</p>
 
             <div class="sticky-icon-bar"> <!--https://lenadesign.org/2021/08/06/css-sticky-social-media-bar/-->
-                <a href="https://www.linkedin.com/in/yvonyen8/" class="linkedin"><i class="fa-brands fa-linkedin-in"></i></a> 
-                <a href="https://github.com/BlackNet13" class="github"><i class="fa-brands fa-github"></i></a> 
+                <a href="https://www.linkedin.com/in/yvonyen8/" aria-label='Connect on Linkedin' class="linkedin"><i class="fa-brands fa-linkedin-in"></i></a> 
+                <a href="https://github.com/BlackNet13" aria-label='Connect on Github' class="github"><i class="fa-brands fa-github"></i></a> 
             </div>
 
 
@@ -165,13 +161,13 @@ and open the template in the editor.
                                     <div class="row">
 
                                         <div class="col-md-5" style="height:50%; overflow: hidden; margin-left:20px; margin-right:-50px;">
-                                            <img data-img="modal-img01" src="images/web1.webp" style="width:100%;"/><br>
+                                            <img data-img="modal-img01" alt='diners webpage' src="images/web1.webp" style="width:100%;"/><br>
 
                                             <div id="modal-img01" class="modal" style="background:rgba(0,0,0,0.8); z-index:40;">
-                                                <img class="modal-content imgContent1" id="imgModal01" style="max-width:650px;  background:none; border:none;">
+                                                <img class="modal-content imgContent1" alt='expanded diners webpage' id="imgModal01" style="max-width:650px;  background:none; border:none;">
                                             </div>
 
-                                            <span class="contentLink"><a href="https://xd.adobe.com/view/b0b34507-7a51-4013-9ac6-eb8e2a6f7c48-e5e0/" target="_blank">See on Adobe XD</a></span>
+                                            <span class="contentLink"><a href="https://xd.adobe.com/view/b0b34507-7a51-4013-9ac6-eb8e2a6f7c48-e5e0/" aria-label='see on adobe xd' target="_blank">See on Adobe XD</a></span>
                                         </div>
                                         <div class="col-md-7">
                                             <h6><b>Diners</b></h6>
@@ -201,7 +197,7 @@ and open the template in the editor.
                                                 <img src="images/typography1.png" style="width:90%;"/>
                                             </label>-->
 
-                                            <img src="images/typography1.webp" style="width:90%;"/>
+                                            <img src="images/typography1.webp" alt='diners typography used' style="width:90%;"/>
                                             <br><br>
                                             <p>
                                                 The typography chosen appeals to their target audience which consist of 
@@ -209,11 +205,11 @@ and open the template in the editor.
                                                 more delicate and feminine.
                                             </p>
 
-                                            <img src="images/siteMap1.webp" style="width:90%;"/>
+                                            <img src="images/siteMap1.webp" alt='diners sitemap' style="width:90%;"/>
 
                                             <br><br>
                                             <p>
-                                                The site map shows an overview of the contents of each page <br><br><a class='credit' href="http://www.freepik.com" target="_blank">The presentation mockup is a free resource by Zlatko_Plamenov / Freepik</a>
+                                                The site map shows an overview of the contents of each page <br><br><a class='credit' aria-label='' href="http://www.freepik.com" target="_blank">The presentation mockup is a free resource by Zlatko_Plamenov / Freepik</a>
                                             </p>
                                         </div>
 
@@ -244,10 +240,10 @@ and open the template in the editor.
                                 <div class="col-md">
                                     <div class="row">
                                         <div class="col-md-5" style="height:50%; overflow: hidden; margin-left:20px; margin-right:-50px;">
-                                            <img data-img="modal-img02" class='imgAdjust' src="images/mag2.webp" style="width:100%; margin-top:0px;"/><br>
+                                            <img data-img="modal-img02" alt='gucci magazine' class='imgAdjust' src="images/mag2.webp" style="width:100%; margin-top:0px;"/><br>
 
                                             <div id="modal-img02" class="modal" style="background:rgba(0,0,0,0.8); z-index:40;">
-                                                <img class="modal-content imgContent2" id="imgModal02" style="max-width:650px;  background:none; border:none;">
+                                                <img class="modal-content imgContent2" alt='expanded gucci magazine' id="imgModal02" style="max-width:650px;  background:none; border:none;">
                                             </div>
 
                                             <span class="contentLink">Click image to expand</span>
@@ -277,12 +273,12 @@ and open the template in the editor.
                                                 realism of the surroundings.
                                             </p>
 
-                                            <img src="images/moodBoard2.webp" style="width:90%;"/>
+                                            <img src="images/moodBoard2.webp" alt='gucci moodboard' style="width:90%;"/>
                                             <br><br>
                                             <p>
                                                 During the research, the mood board is primarily focus on how other 
                                                 photographers capture a certain look and what the end goal of the 
-                                                magazine spread should carry in it's looks. <br><br><a class='credit' href="http://www.freepik.com" target="_blank">The presentation mockup is a free resource by rawpixel.com / Freepik</a>
+                                                magazine spread should carry in it's looks. <br><br><a class='credit' aria-label='' href="http://www.freepik.com" target="_blank">The presentation mockup is a free resource by rawpixel.com / Freepik</a>
                                             </p>
                                         </div>
 
@@ -314,13 +310,13 @@ and open the template in the editor.
                                     <div class="row">
 
                                         <div class="col-md-5" style="height:50%; overflow: hidden; margin-left:20px; margin-right:-50px;">
-                                            <img data-img="modal-img03" class="imgAdjust2" src="images/app3.webp" style="width:100%;"/><br>
+                                            <img data-img="modal-img03" alt='auti learners app' class="imgAdjust2" src="images/app3.webp" style="width:100%;"/><br>
 
                                             <div id="modal-img03" class="modal" style="background:rgba(0,0,0,0.8); z-index:40;">
-                                                <img class="modal-content imgContent3" id="imgModal03" style="max-width:650px;  background:none; border:none;">
+                                                <img class="modal-content imgContent3" alt='expanded auti learners app' id="imgModal03" style="max-width:650px;  background:none; border:none;">
                                             </div>
 
-                                            <span class="contentLink"><a href="https://xd.adobe.com/view/7deece64-621a-4427-b895-3aa27bf001f3-28bd/" target="_blank">See on Adobe XD</a></span>
+                                            <span class="contentLink"><a href="https://xd.adobe.com/view/7deece64-621a-4427-b895-3aa27bf001f3-28bd/" aria-label='see on adobe xd' target="_blank">See on Adobe XD</a></span>
                                         </div>
                                         <div class="col-md-7">
                                             <h6><b>Auti-learners</b></h6>
@@ -350,10 +346,10 @@ and open the template in the editor.
                                                 hopes work with kids with autism on their skill sets. 
 
                                             </p>                                            
-                                            <img src="images/siteMap3.webp" style="width:90%;"/>
+                                            <img src="images/siteMap3.webp" alt='auti learners sitemap' style="width:90%;"/>
                                             <br><br>
                                             <p>
-                                                The site map shows an overview of the contents of each page<br><br><a class="credit" href="http://www.freepik.com" target="_blank">The presentation mockup is a free resource by Freepik</a>
+                                                The site map shows an overview of the contents of each page<br><br><a class="credit" aria-label='' href="http://www.freepik.com" target="_blank">The presentation mockup is a free resource by Freepik</a>
                                             </p>
                                         </div>
 
@@ -459,7 +455,7 @@ and open the template in the editor.
                                                 <li>Resume Download Link & Contact form functionality /</li>
                                                 <li>Transition between pages /</li>
                                                 <li>Portfolio page functionality /</li>
-                                                <li>Portfolio Content</li>
+                                                <li>Portfolio Content /</li>
                                                 <li>Optimization tweaks based on Google's <a href="https://pagespeed.web.dev/">PageSpeed Insights</a></li>
                                                 <br>
                                                 As of 16/9/2023: (*first entry is for mobile, second is for desktop)<br>
