--- a/L05_exercise1/index.html
+++ b/L05_exercise1/index.html
@@ -55,10 +55,10 @@
             padding: 4%;
             text-align: center;
             background: black;
+        }
 
-            a{
+        nav a{
                 color:white;
-            }
         }
 
         img{
