--- a/L05_worldExplore/index.html
+++ b/L05_worldExplore/index.html
@@ -7,7 +7,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet"> 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-</head>
+        <title>Home</title>
+      </head>
    <body>
 
     <nav class="navbar navbar-expand-sm fixed-top">
