--- a/L05_worldExplore/royalCaribbean.html
+++ b/L05_worldExplore/royalCaribbean.html
@@ -7,6 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet"> 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://kit.fontawesome.com/095414b637.js" crossorigin="anonymous"></script>
         <title>Royal Caribbean Cruise</title>
       </head>
    <body>
@@ -93,7 +94,7 @@
 
         
         <footer style="bottom:5;">
-            <i>WX World Explore Tour © Copyright</i>
+          <i style="float:left; margin-left: 10px;">WX World Explore Tour © Copyright</i> <span style="float:right; margin-right:10px;"> <i class="fa-brands fa-facebook"></i> <i class="fa-brands fa-instagram"></i></span>
         </footer>
         
    </body> 
